@@ -5,6 +5,7 @@ GeneWeb Version 2.01
 --------------------
 
 * GeneWeb daemon/CGI (gwd)
+  - [Mar 14, 99] Cleaned up some generated HTML code.
   - [Mar 10, 99] Inlined "List.remove_assoc" in order to be compilable
     by Ocaml and Camlp4 2.01 as well.
 
