@@ -1,6 +1,10 @@
 GeneWeb Version 2.01
 --------------------
 
+* GeneWeb Daemon/CGI (gwd)
+  - [Mar 14, 99] In anniversaries, in the list of months menus, the selected
+    month is now the current month, not January.
+
 * Gedcom to GeneWeb (ged2gwb)
   - [Mar 11, 99] Fixed horrible bug: treatment of accents worked bad for
     gedcom files with ascii charset (resulting problems in "a" umlaut, for
